baselines/AveragePooling_Diffusion_Baseline/sampling_logs/sample_17046583.err
sampling:   0%|          | 0/10 [00:00<?, ?it/s]sampling:  10%|█         | 1/10 [00:02<00:18,  2.04s/it]sampling:  20%|██        | 2/10 [00:03<00:11,  1.46s/it]sampling:  30%|███       | 3/10 [00:04<00:08,  1.27s/it]sampling:  40%|████      | 4/10 [00:05<00:07,  1.18s/it]sampling:  50%|█████     | 5/10 [00:06<00:05,  1.13s/it]sampling:  60%|██████    | 6/10 [00:07<00:04,  1.12s/it]sampling:  70%|███████   | 7/10 [00:08<00:03,  1.09s/it]sampling:  80%|████████  | 8/10 [00:09<00:02,  1.07s/it]sampling:  90%|█████████ | 9/10 [00:10<00:01,  1.11s/it]sampling: 100%|██████████| 10/10 [00:11<00:00,  1.11s/it]sampling: 100%|██████████| 10/10 [00:11<00:00,  1.17s/it]
sampling:   0%|          | 0/10 [00:00<?, ?it/s]sampling:  10%|█         | 1/10 [00:01<00:11,  1.24s/it]sampling:  20%|██        | 2/10 [00:02<00:09,  1.15s/it]sampling:  30%|███       | 3/10 [00:03<00:07,  1.13s/it]sampling:  40%|████      | 4/10 [00:04<00:06,  1.10s/it]sampling:  50%|█████     | 5/10 [00:05<00:05,  1.09s/it]sampling:  60%|██████    | 6/10 [00:06<00:04,  1.09s/it]sampling:  70%|███████   | 7/10 [00:07<00:03,  1.09s/it]sampling:  80%|████████  | 8/10 [00:08<00:02,  1.09s/it]sampling:  90%|█████████ | 9/10 [00:09<00:01,  1.09s/it]sampling: 100%|██████████| 10/10 [00:10<00:00,  1.08s/it]sampling: 100%|██████████| 10/10 [00:10<00:00,  1.10s/it]
sampling:   0%|          | 0/10 [00:00<?, ?it/s]sampling:  10%|█         | 1/10 [00:01<00:16,  1.79s/it]sampling:  20%|██        | 2/10 [00:02<00:11,  1.42s/it]sampling:  30%|███       | 3/10 [00:04<00:09,  1.31s/it]sampling:  40%|████      | 4/10 [00:05<00:07,  1.25s/it]sampling:  50%|█████     | 5/10 [00:06<00:06,  1.20s/it]sampling:  60%|██████    | 6/10 [00:07<00:04,  1.17s/it]sampling:  70%|███████   | 7/10 [00:08<00:03,  1.15s/it]sampling:  80%|████████  | 8/10 [00:09<00:02,  1.13s/it]sampling:  90%|█████████ | 9/10 [00:10<00:01,  1.13s/it]sampling: 100%|██████████| 10/10 [00:11<00:00,  1.12s/it]sampling: 100%|██████████| 10/10 [00:11<00:00,  1.19s/it]
Traceback (most recent call last):
  File "/home/x-jlyu5/jinhua/Factor_Diffusion_Experiments/AveragePooling_Diffusion_Baseline/Karman_Vortex_2D/k8_lr1e-4/files/Karman2d_sample.py", line 9, in <module>
    from Karman2d_DiT_Model import TrajDiT, GaussianDiffusion
  File "/home/x-jlyu5/jinhua/Factor_Diffusion_Experiments/AveragePooling_Diffusion_Baseline/Karman_Vortex_2D/k8_lr1e-4/files/Karman2d_DiT_Model.py", line 251
    def generate_trajectory(self, condition_hr, pool_k=8,
                           ^
SyntaxError: '(' was never closed
